components/default/zwave/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app zwave
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://zwave.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/z-wave-js-ui.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["zwave.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: *app
          port: 3000
